# MediaSamples

./: .gitignore  README.en.md  README.md
MediaSamples/: .gitignore  build.gradle  settings.gradle
MediaSamples/app/: build.gradle
MediaSamples/app/src/androidTest/java/com/manu/mediasamples/: ExampleInstrumentedTest.kt
MediaSamples/app/src/main/: AndroidManifest.xml
MediaSamples/app/src/main/cpp/: CMakeLists.txt  native-yuv-to-buffer-lib.cpp
MediaSamples/app/src/main/java/com/manu/mediasamples/: PermissionActivity.kt
MediaSamples/app/src/main/java/com/manu/mediasamples/others/: Encode.kt
MediaSamples/app/src/main/res/layout/: activity_camera.xml  activity_open_g_l.xml
MediaSamples/app/src/main/res/raw/: video_vertex_shader.glsl
MediaSamples/app/src/main/res/values-night/: themes.xml
MediaSamples/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/manu/mediasamples/: CameraActivity.kt  Encode.kt  MainActivity.kt  PermissionActivity.kt  Temp.kt  Test.java
app/src/main/java/com/manu/mediasamples/app/: MediaApplication.kt
app/src/main/java/com/manu/mediasamples/async/: AsyncEncodeManager.kt  CameraActivity2.kt
app/src/main/java/com/manu/mediasamples/encode/: EncodeManager.kt  EncodeThread.kt
app/src/main/java/com/manu/mediasamples/frame/: AsyncInputEncodeManager.kt  CameraActivity3.kt  IMediaNative.java  YUVTools.java
app/src/main/java/com/manu/mediasamples/sync/: CameraActivity.kt  EncodeManager.kt  SyncEncodeThread.kt
app/src/main/java/com/manu/mediasamples/util/: AutoFitTextureView.kt  CodecUtil.kt  GLUtil.kt  L.kt  TextureHelper.kt
app/src/main/java/com/manu/mediasamples/video/: EncodeManager.kt
app/src/main/res/layout/: activity_camera.xml  activity_main.xml  activity_open_g_l.xml  activity_record_audio.xml  activity_track_audio.xml
app/src/main/res/raw/: video_fragment_shader_default.glsl  video_vertex_shader_default.glsl
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/manu/mediasamples/: ExampleUnitTest.kt
ffmpeg-decode-av/: CMakeLists.txt  main.c
ffmpeg-decode-av/src/audio/: audio_sample.c  audio_sample.h
ffmpeg-decode-av/src/avio/: avio_audio_sample.c  avio_audio_sample.h
ffmpeg-decode-av/src/base/: av_base.c  av_base.h
ffmpeg-decode-av/src/video/: video_sample.c  video_sample.h
ffmpeg-demux-mp4/: CMakeLists.txt  main.c
ffmpeg-resample-audio/: CMakeLists.txt  main.c
ffmpeg-resample-audio/src/base/: audio_resample_base.c  audio_resample_base.h
ffmpeg-resample-audio/src/resampler/: audio_resample.c  audio_resample.h
ffmpeg-resample-audio/src/sample/: sample.c  sample.h
sdf-pcm/: CMakeLists.txt  main.c
(+37 files in other folders)
